Created images folder in HTML

--- a/HTML/attributes.html
+++ b/HTML/attributes.html
@@ -7,7 +7,7 @@
   <p style='color:lime';> And this one is lime. </p>
 
   <p title="If it's not there you're doing something wrong"> And this is a low-quality bird pic. </p> 
-  <img src='image_bird.png' width='330' height='273'; alt='Low-quality bird pic'>
+  <img src='/images/image_bird.png' width='330' height='273'; alt='Low-quality bird pic'>
 
 
 </body>
