--- a/HTML/headings.html
+++ b/HTML/headings.html
@@ -10,9 +10,14 @@
     <h1> Heading 1 </h1>
     <h2> Heading 2 </h2>
     <h3> Heading 3 </h3>
+    <br>
+    <p style='font-size:32px'> There's an empty break here! </p>
+    <br>
     <h4> Heading 4 </h4>
     <h5> Heading 5 </h5>
     <h6> Heading 6 </h6>
+    <p style='font-size:32px'> There's a break with a line here! <br> And it leads to... </p>
+    <hr>
     <h1 style='font-size:68px;'> A bigger heading! </h1>
   
   </body>
