--- a/HTML/styles.html
+++ b/HTML/styles.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang='en'>
 
-<body>
+<body style='background-color: aquamarine;'>
   
+  <p> This text has no background! </p>
+  <p style='background-color: red; width: 324px; height: 44px;'> And this text is on a red background! </p>
+  <br>
+  <p style='background-color: rosybrown;'> Multiple lines <br> of text! </p>
+  <p style='background-color:black; color:salmon;'> This text is salmon! </p>
+  <p style='font-family: Impact;'> This text is written in Impact font! </p>
+  <p style='font-size: 34px;'> This text is 34px big! </p>
+  <br>
+  <h1 style='background-color: cornflowerblue; color: yellow; font-family: Times New Roman; text-align:center; '> The final result. </h1>
+  <p style='background-color: tomato; color: turquoise; text-align: center; font-family:monospace; font-size: 20px;'> Design is my passion. </p>
 
 </html>
