--- a/HTML/colors.html
+++ b/HTML/colors.html
@@ -6,16 +6,16 @@
 
 <body> 
   <h1 style='background-color:dodgerblue; color:white; font-family: Times New Roman; text-align: center;'> Sample heading </h1>
-  <p style='background-color: tomato; font-size: 24px;'> Sample text. </p>
+  <p style='background-color: red; font-size: 24px;'> Sample text. </p>
   <p style='color:tomato'> This text is tomato color! </p>
   <h1 style='border: 30px solid lime; background-color: yellow; text-align: center; height:fit-content;'> Sample text </h1>
  
   <h1 style="background-color:rgb(255, 99, 71);"> rgb(255, 99, 71) </h1>
   <h1 style="background-color:#ff6347;"> #ff6347 </h1>
-  <h1 style="background-color:hsl(9, 100%, 64%);"> hsl(9, 100%, 64%) </h1>
   <div class='test;' style='font-family: Consolas'>
-    <h1 style="background-color:rgba(255, 99, 71, 0.5);"> rgba(255, 99, 71, 0.5) </h1>
-    <h1 style="background-color:hsla(9, 100%, 64%, 0.5); color:white"> hsla(9, 100%, 64%, 0.5) </h1>  
+  <h1 style="background-color:hsl(9, 100%, 64%);"> hsl(9, 100%, 64%) </h1>
+  <h1 style="background-color:rgba(255, 99, 71, 0.5);"> rgba(255, 99, 71, 0.5) </h1>
+  <h1 style="background-color:hsla(9, 100%, 64%, 0.5); color:white"> hsla(9, 100%, 64%, 0.5) </h1>  
   </div>
 </body>
 
