--- a/HTML/html_css_external.html
+++ b/HTML/html_css_external.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
   <title> HTML CSS External </title>
-  <link rel='stylesheet' type='text/css' href='style1.css'>
+  <link rel='stylesheet' type='text/css' href='styles/style.css'>
 </head>
 
 <body>
