--- a/HTML/comments.html
+++ b/HTML/comments.html
@@ -5,7 +5,7 @@
 </head>
 
 <body> 
-  <h1> Look at the .html to understand what the hell is going on here. </h1>
+  <h1> Look at the source code to understand what the hell is going on here. </h1>
   <!-- Some notes for the future can be left here. --> 
   <!-- <p> Sample text. </p>   
   Hidden paragraph! -->
