--- a/HTML/html_css_external.html
+++ b/HTML/html_css_external.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head> 
   <title> HTML CSS External </title>
-  <link rel='stylesheet' type='text/css' href='styles/style.css'>
+  <link rel='stylesheet' type='text/css' href='styles/style1.css'>
 </head>
 
 <body>
