--- a/HTML/html_links.html
+++ b/HTML/html_links.html
@@ -22,6 +22,11 @@
   <a href='https://youtu.be/dQw4w9WgXcQ' target='_parent'> _parent attribute tested. </a> <br>
   <a href='https://youtu.be/dQw4w9WgXcQ' target='_top'> _top attribute tested. </a> <br>
   
+  <a href='https://youtu.be/dQw4w9WgXcQ' target='blank' style='color: yellow;'> Links can of course be styled with CSS, to get another look! </a>
+  <br>
+  <a href="mailto:someone@example.com"> mailto: inside the href attribute opens an email program. </a>
+  <br>
+  <button onclick="document.location='styles.html'"> Styles </button> 
 </body>
 
 </html>
