HTML Link Colors

--- a/HTML/html_links.html
+++ b/HTML/html_links.html
@@ -3,6 +3,15 @@
 
 <head>
   <title> HTML Links </title>
+  <link rel='stylesheet' type='text/css' href='styles/link_style.css'>
+  <style> 
+    body {
+      background-color: black;
+    }
+    pre {
+      color:white;
+    }
+  </style>
 </head>
 
 <body>
@@ -25,8 +34,10 @@
   <a href='https://youtu.be/dQw4w9WgXcQ' target='blank' style='color: yellow;'> Links can of course be styled with CSS, to get another look! </a>
   <br>
   <a href="mailto:someone@example.com"> mailto: inside the href attribute opens an email program. </a>
-  <br>
-  <button onclick="document.location='styles.html'"> Styles </button> 
+  <br> <br> <!-- I know this looks bad, but I was too dumb at that moment to add spacing between lines -->
+  <button onclick="document.location='styles.html'" style='padding: 12px; ;'> Styles </button> 
+
 </body>
+<!-- This whole document is a mess and I will fix it sometime in the future // 21.11.2021 -->
 
 </html>
