--- a/HTML/HTML_images.html
+++ b/HTML/HTML_images.html
@@ -6,9 +6,15 @@
 </head>
 
 <body>
-<img src='images/git_gud.jpg'; width='382px' height='500px'; alt='You should git gud.'>
-<img src='images/image_bird.png'; alt='berd'>
-
+<img src='images/git_gud.jpg'; alt='You should git gud.'; style='width: 382px; height: 500px;';>
+<img src='images/image_bird.png'; alt='berd'; style='width: 110px; height: 91px;'>
+<hr>
+<a href='https://youtu.be/dQw4w9WgXcQ'> 
+  <img src='images/image_bird.png'; alt='berd'; style='width: 110px; height: 91px;'; title='This is a link.'>
+</a>
+<hr>
+<p> <img src='images/image_bird.png'; alt='berd'; style='float:right; width: 110px; height: 91px;';>
+The image will float to the right of the text. </p>
 </body>
 
 </html>
